view task fixed

--- a/src/main/resources/templates/viewtask.html
+++ b/src/main/resources/templates/viewtask.html
@@ -128,7 +128,7 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorator="la
 				<a href="formtask.html"
 					th:href="@{'/task/viewmodify/' + ${viewtask.id}}"> <span
 					class="btn btn-primary input-submit-create-user material-icons">mode_edit</span></a>
-				<a href="persons"
+				<a href="tasks"
 					th:href="@{'/task/delete/' + ${viewtask.id}}"> <span
 					class="btn btn-primary input-submit-create-user material-icons md-36">delete</span>
 				</a>
