--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
 	<div th:fragment="header" class="">
 		<nav
 			class="navbar navbar-dark bg-dark navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" th:href="@{/main}">
+			<a class="navbar-brand" th:href="@{/login}">
 		      <img src="/img/logo.png" width="80" height="100" alt="">
 		    </a>
 		</nav>
