--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -40,12 +40,9 @@
 		</nav>
 	</div>
 	<h1>Custom error page</h1>
-	<ul>
-        <li>status: <c:out value="${requestScope.status}" /></li>
-        <li>error: <c:out value="${requestScope.error}" /></li>
-        <li>message: <c:out value="${requestScope.message}" /></li>
-        <li>path: <c:out value="${requestScope.path}" /></li>
-        <li>trace: <c:out value="${requestScope.trace}" /></li>
-    </ul>
+		<div class="alert alert-danger" role="alert">
+		  Error: Probably you tried to delete a field that was related with other or you tryied to insert an empty field.
+		</div>
+     
 </body>
 </html>
