--- a/src/main/resources/templates/recoverpassword.html
+++ b/src/main/resources/templates/recoverpassword.html
@@ -15,7 +15,11 @@
 	margin-left:40%;
 }
 .loginsubmit{
-	margin-left:45%;
+	margin-left:41%;
+}
+.marginTwoButtons{
+	margin-right:5%;
+	margin-top:1%;
 }
 </style>
 </head>
@@ -28,36 +32,22 @@
 		    </a>
 		</nav>
 	</div>
-	<h1>Login page</h1>
+	<h1>Reset password</h1>
 	<div class="container">
-		
-		<div th:if="${param.error}" class="alert alert-danger">Invalid
-			username and password.</div>
-		<div th:if="${param.logout}" class="alert alert-danger">You have
-			been logged out.</div>
-
-		<form th:action="@{/doLogin}" method="post" class="form-horizontal">
+		<form id="personForm" th:action="@{/recoverpassword/forgotpassword}"
+			th:object="${user}" action="#" method="post"
+			class="form-horizontal">
 			<div class="form-group login">
-				<label class="control-label col-xs-2" for="user"> <strong>User Name:</strong>
-				</label>
-
-				<div class="col-xs-10">
-					<input id="user" type="text" name="user" />
-				</div>
-			</div>
-			<div class="form-group login">
-				<label class="control-label col-xs-2" for="password">
-					<strong>Password:</strong> </label>
-
-				<div class="col-xs-10">
-					<input id="password" type="password" name="password" />
-				</div>
-			</div>
-			<div class="col-xs-10 login">
-				<a href="/recoverpassword"> Forgot password?</a>
+					<label class="control-label col-xs-2" for="user"><strong>User</strong></label>
+					<div class="col-xs-10">
+						<input class="create-user-form" id="user" type="text" title="user"
+							th:field="*{user}" /> <span th:if="${#fields.hasErrors('user')}"
+							th:errors="*{user}" class="help-block">User Error</span>
+					</div>
 			</div>
 			<div class="form-actions col-xs-offset-2 col-xs-10 loginsubmit">
-				<input type="submit" class="btn btn-primary" value="Sign In" />
+				<button class="btn btn-primary marginTwoButtons" onclick="window.history.go(-1); return false;" value="Back">Back</button>
+				<input type="submit" class="btn btn-primary marginTwoButtons" value="Accept" />
 			</div>
 		</form>
 	</div>
