--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -45,8 +45,7 @@
 		tried to delete a field that was related with other or you tryied to
 		insert an empty field.</div>
 	<div class="form-actions col-xs-offset-2 col-xs-10 loginsubmit">
-		<input type="submit" class="btn btn-primary" value="Accept"
-			style="margin-left: 1%;" />
+		<button class="btn btn-primary" onclick="window.history.go(-1); return false;" value="Back" style="margin-left: 1%;">Back</button>		
 	</div>
 </body>
 </html>
