--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,6 +14,10 @@
 .login{
 	margin-left:40%;
 }
+.forgot{
+	margin-left:43%;
+	margin-bottom:1%;
+}
 .loginsubmit{
 	margin-left:45%;
 }
@@ -28,7 +32,7 @@
 		    </a>
 		</nav>
 	</div>
-	<h1>Login page</h1>
+	<h1>Login</h1>
 	<div class="container">
 		
 		<div th:if="${param.error}" class="alert alert-danger">Invalid
@@ -53,7 +57,7 @@
 					<input id="password" type="password" name="password" />
 				</div>
 			</div>
-			<div class="col-xs-10 login">
+			<div class="col-xs-10 forgot">
 				<a href="/recoverpassword"> Forgot password?</a>
 			</div>
 			<div class="form-actions col-xs-offset-2 col-xs-10 loginsubmit">
